# lattice

./: .gitignore  .tmp-serve-3000-py.err  AI_DEVELOPMENT_GUIDE.md  BUILD_LOG.md  CHANGELOG.md  CLAUDE_CODE_OBSIDIAN_MARKDOWN.md  CRITICAL_BUGS_FIXED.md  DEPLOYMENT_SUMMARY.md  DESKTOP_APP.md  DOCS_INDEX.md  EXPORT_INTEGRATION_GUIDE.md  FEATURES_SUMMARY.md  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_REPORT.md  FINAL_TESTING_GUIDE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION.md  MANUAL_VERIFICATION.md  MARKDOWN_FIX_SUMMARY.md  OPERATOR_GUIDE.md  OPTIMIZATION-REPORT.md  PHASE_3_4_5_SUMMARY.md  PRODUCT_STRATEGY.md  QUICK_START.md  QUICK_TEST_CHECKLIST.md  QUICK_TEST_GUIDE.md  README.md  RELEASE_CHECKLIST.md  RELEASE_GUIDE.md  ROADMAP.md  TESTING_GUIDE_PHASE1_PHASE2.md  TODO.md  VERIFICATION_CHECKLIST.md  WEEK2_REFACTOR_COMPLETE.md  eslint.config.mjs  find-loops.mjs  next-env.d.ts  next.config.ts  (+8 more)
.claude/: settings.local.json
.github/: DEPLOYMENT_CHECKLIST.md  RELEASE_TEMPLATE.md
.playwright-cli/: page-2026-02-08T16-09-47-315Z.yml  page-2026-02-08T16-10-47-697Z.yml  page-2026-02-08T16-11-13-000Z.yml  page-2026-02-08T16-11-47-829Z.yml  page-2026-02-08T16-13-02-553Z.yml  page-2026-02-08T16-13-28-825Z.yml  page-2026-02-08T16-13-53-653Z.yml  page-2026-02-08T16-14-40-617Z.yml  page-2026-02-08T16-14-57-875Z.yml  page-2026-02-08T16-15-18-257Z.yml  page-2026-02-08T16-16-17-097Z.yml  page-2026-02-08T16-17-02-330Z.yml  page-2026-02-08T16-18-04-480Z.yml  page-2026-02-08T16-18-58-136Z.yml  page-2026-02-08T16-19-27-452Z.yml  page-2026-02-08T16-19-44-986Z.yml  page-2026-02-08T16-24-28-070Z.yml  page-2026-02-08T16-38-36-092Z.yml  page-2026-02-08T17-04-12-991Z.yml  page-2026-02-08T17-04-33-737Z.yml  page-2026-02-08T17-04-45-109Z.yml  page-2026-02-08T17-05-03-031Z.yml  page-2026-02-08T17-05-11-863Z.yml  page-2026-02-08T17-05-26-761Z.yml  page-2026-02-08T17-05-35-673Z.yml  page-2026-02-08T17-05-50-839Z.yml  page-2026-02-08T17-06-05-702Z.yml  page-2026-02-08T17-06-22-650Z.yml  page-2026-02-08T17-06-32-088Z.yml  page-2026-02-08T17-06-49-010Z.yml  page-2026-02-08T17-06-58-161Z.yml  page-2026-02-08T17-07-16-634Z.yml  page-2026-02-08T17-07-25-144Z.yml  (+7 more)
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  pdf_native.rs
(+1026 files in other folders)
