[package]
name = "lattice"
version = "0.2.0"
description = "Lattice 格致 - The Local-First, AI-Native Scientific Workbench"
authors = ["Lattice Team"]
license = "MIT"
repository = "https://github.com/tryandaction/lattice"
edition = "2021"

# Build configuration
[build-dependencies]
tauri-build = { version = "2", features = [] }

# Runtime dependencies
[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Feature flags
[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

# Release profile optimizations
[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
